# airspec

./: .editorconfig  .envrc  .gitignore  .rustfmt.toml  .sops.yaml  CMakeLists.txt  Cargo.toml  build.rs  flake.nix  package.json  rust-toolchain.toml
firmware/: flake.nix
firmware/proto/: blink.proto  config.proto  thermopile.proto
nix/keys/: mammothbane.asc
nix/keys/machines/: airspecs.asc
nix/nixos/: .envrc
nix/nixos/airspecs/: aws_support.nix  default.nix  hardware.nix  image.nix  influx.nix  ingest.nix  nginx.nix  physio_chain.nix  physio_chain_override.nix  prometheus.nix  secrets.nix  secrets.yaml  server.nix  users.nix
nix/nixos/media/: default.nix  hardware.nix  nginx.nix  sshguard.nix  users.nix
nix/pkgs/: airspecs_server.nix  default.nix  grpc_swift.nix  langchain.nix  physio_chain.nix  swift_protobuf.nix
nix/pkgs/firmware/: CMakeLists.txt  default.nix
proto/: blink.proto  bme.proto  color.proto  colors.proto  config.proto  imu.proto  lib.proto  lp5523.proto  lux.proto  message.proto  mic.proto  sample.proto  sensor_control.proto  sgp.proto  sht.proto  spectrometer.proto  subpath.proto  svc.proto
proto/bluetooth/: packet.proto  sensor_control.proto
proto/firmware/: config.proto  sensor.proto
proto/firmware/config/: blink.proto  bme.proto  bme_cfg.proto  imu.proto  lp5523.proto  lp5523_cfg.proto  lux_cfg.proto  mic.proto  sgp.proto  sgp_cfg.proto  sht_cfg.proto  spectrometer.proto  thermopile_cfg.proto
proto/firmware/sensor/: blink.proto  bme.proto  imu.proto  lp5523.proto  lux.proto  mic.proto  sgp.proto  sht.proto  spectrometer.proto  thermopile.proto
proto/svc/: dump.proto  ingest.proto  meta.proto  server.proto
public/: index.html  manifest.json
python/: airSpecSimulator  pyproject.toml
python/airspec/: imu.py  lux.py
src/: App.js  footer.routes.js  lib.rs  opt.rs  trace.rs
src/assets/: airspec.css  airspec.css.map
src/bluetooth/buttons/: index.js
src/bluetooth/sensor/: index.js
src/examples/Footers/CenteredFooter/: index.js
src/firmware/: .envrc  .gitignore  .mxproject  CMakeLists.txt  default.nix
src/firmware/Core/Inc/: FreeRTOSConfig.h  app_conf.h  app_entry.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  tim.h
src/firmware/Core/Src/: adc.c  app_entry.c  app_freertos.cpp  blink.c  freertos_port.c  gpio.c  i2c.c  imu.cpp  lp5523.c  main.cpp  rtc.c  sai.c  spi.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  system_stm32wbxx.c  tim.c
src/firmware/Core/Startup/: startup_stm32wb5mmghx.s
src/firmware/Middlewares/: .gitignore
src/firmware/STM32_WPAN/App/: app_ble.c  app_ble.h  ble_conf.h  dis_app.c  dis_app.h  dt_server_app.c  dt_server_app.h  dts.c  hrs_app.c  hrs_app.h
src/firmware/USB_Device/App/: usb_device.c  usbd_desc.c  usbd_desc.h  usbd_dfu_flash.c  usbd_dfu_flash.h
src/hooks/: useAirSpecInterface.ts
src/pages/Presentation/: index.js
src/svc/: .envrc
src/svc/backend/: build.rs
src/svc/backend/src/: opt.rs  trace.rs
src/svc/ingest/: .gitignore  Cargo.toml  build.rs  default.nix
src/svc/ingest/benches/: load.rs
src/svc/ingest/src/: auth.rs  batch.rs  forward.rs  lib.rs  main.rs  opt.rs  prometheus.rs  run.rs  test.rs  trace.rs  util.rs
src/svc/ingest/src/db/: admin_token.rs  bad_packet.rs  mod.rs  user_token.rs
src/svc/ingest/src/endpoints/: dump.rs  ingest.rs  ingest_proto.rs  mod.rs
src/svc/ingest/src/endpoints/admin/: auth_token.rs  mod.rs
src/svc/ingest/src/normalize/: app_metadata.rs  blink.rs  bme.rs  imu.rs  lux.rs  mic.rs  mic_level.rs  mod.rs  sgp.rs  sht.rs  spec.rs  survey.rs  therm.rs
src/svc/ingest/tests/: serve.rs
src/web/: .envrc
src/web/docs/: default.nix  mkdocs.yml
src/web/docs/docs/: nix.md
src/web/docs/docs/airspecs_software/: configuration.md
src/web/docs/docs/server_software/: nix.md  proto.md
src/web/docs/docs/software/: api.md  auth.md  docs.md  nix.md  proto.md
src/web/website/: README.md  default.nix  package.json  tsconfig.json
src/web/website/config/: webpack.config.js  webpackDevServer.config.js
src/web/website/public/: index.html
src/web/website/scripts/: build.js
src/web/website/src/: App.js  App.tsx  footer.routes.tsx  index.js  index.tsx  routes.js  routes.tsx  store.ts
src/web/website/src/bluetooth/buttons/: code.js  debug.ts  dfu.ts  index.js  index.tsx  property.tsx  sensor.tsx  slice.ts  types.ts
src/web/website/src/bluetooth/sensor/: index.js
src/web/website/src/hooks/: useAirSpecInterface.ts
src/web/website/src/pages/: admin.tsx
src/web/website/src/pages/Admin/: index.tsx  (+4 more)
src/web/website/src/util/: index.ts
web/docs/: mkdocs.yml
web/docs/docs/: docs.md  index.md  nix.md
web/website/: default.nix
web/website/src/assets/: airspec.css
(+42 files in other folders)
