[package]
name = "airspec"
authors = ["Nathan Perry <np@npry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb2 = { version = "0.3", default-features = false, features = ["rustls"] }
chrono = "0.4"

async-std = { version = "1.12", features = ["attributes"] }
async-compat = "0.2"
tide = "0.16"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }

structopt = "0.3"
eyre = "0.6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

cfg-if = "1.0.0"
