[tool.poetry]
name = "airspec"
version = "0.1.0"
description = ""
authors = ["Patrick Chwalek <patrickchwalek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pyserial = "^3.5"
numpy = "^1.24.1"
influxdb-client = "^1.35.0"
influxdb = "^5.3.1"
bleak = "^0.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
