[package]
name = "airspecs_ingest"
authors = ["Nathan Perry <np@npry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-compat = "0.2"
futures-batch = { version = "0.6", optional = true }
tide = "0.16"
tokio = { version = "1.24", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
csv = "1.1"

serde_json = "1.0"

structopt = "0.3"
eyre = "0.6"
itertools = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

cfg-if = "1.0.0"
lazy_static = "1.4"

chrono = { version = "0.4", features = ["serde"] }

[dependencies.influxdb2]
package = "influxdb2_client"
git = "https://github.com/mammothbane/influxdb_iox"
rev = "6937d1a2a"

[features]
chunked = ["futures-batch"]
