[package]
name = "airspecs_ingest"
authors = ["Nathan Perry <np@npry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-compat = "0.2"
futures-batch = "0.6"
tide = "0.16"
tap = "1.0"

prost = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"

serde_json = "1.0"
rmp-serde = "1.1"

rmpv = { version = "1.0", features = ["with-serde"] }
csv = "1.1"

structopt = "0.3"
itertools = "0.10"

eyre = "0.6"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

cfg-if = "1.0.0"
lazy_static = "1.4"

chrono = { version = "0.4", features = ["serde"] }


[dependencies.influxdb2]
package = "influxdb2_client"
git = "https://github.com/mammothbane/influxdb_iox"
rev = "6937d1a2a"

[dev-dependencies]
tempdir = "0.3"
rand = "0.8"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls", "middleware-logger", "encoding"] }

[build-dependencies]
prost-build = "0.11"
tempfile = "3.3"
eyre = "0.6"
dotenv = "0.15"
walkdir = "2.3"
